billing demo code

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,8 @@
 OPENAI_API_KEY=dummy-key
+JWT_SIGNING_KEY=
 PD_MONGO_URI="mongodb://localhost:27017"
+
+# Billing (optional; defaults to mock provider)
+# PD_BILLING_PROVIDER=mock
+# STRIPE_API_KEY=
+# STRIPE_WEBHOOK_SECRET=
